@@ -44,13 +44,16 @@ static const int WD_FDC_SR_LOST    = 1<<2; /* Lost data */
 static const int WD_FDC_SR_IDX_DRQ = 1<<1; /* Index pulse / Data request */
 static const int WD_FDC_SR_BUSY    = 1<<0; /* Busy (command under execution) */
 
+/* Configuration flags (interface-specific) */
 static const int WD_FLAG_NONE      = 0;
-static const int WD_FLAG_BETA128   = 1<<0; /* Beta128 connects HLD output pin to READY input pin and
-					      MOTOR ON pin on FDD interface */
-static const int WD_FLAG_DRQ       = 1<<1; /* Opus Discovery need `datarq' line for every byte */
+/* The Beta 128 connects HLD output pin to READY input pin and MOTOR ON pin
+ * on the FDD interface */
+static const int WD_FLAG_BETA128   = 1<<0;
+/* The Opus Discovery needs a 'datarq' line for every byte */
+static const int WD_FLAG_DRQ       = 1<<1;
 
 typedef enum wd_type_t {
-  WD1773 = 0,		/* WD1773 */
+  WD1773 = 0,
   FD1793,
   WD1770,
   WD1772,
@@ -59,23 +62,22 @@ typedef enum wd_type_t {
 typedef struct wd_fdc {
   fdd_t *current_drive;
 
-  wd_type_t type;		/* WD1770, WD1772, WD1773 */
+  wd_type_t type;	/* WD1770, FD1793, WD1772, WD1773 */
 
   int rates[ 4 ];
   int spin_cycles;
-  fdd_dir_t direction;		/* 0 = spindlewards, 1 = rimwards */
-  int dden;			/* SD/DD -> FM/MFM */
-  int intrq;			/* INTRQ line status */
-  int datarq;			/* DRQ line status */
-  int head_load;		/* WD1773/FD1793 */
-  int hlt;			/* WD1773/FD1793 Head Load Timing input pin */
-  int hlt_time;			/* "... When a logic high is found on the HLT input
-				   the head is assumed to be enganged. It is typically
-				   derived from a 1 shot triggered by HLD ..."
-				   if hlt_time > 0 it means trigger time in ms, if = 0
-				   then hlt should be set with wd_fdc_set_hlt()  */
-  unsigned int flags;		/* Beta128 connects HLD output pin to READY input pin and
-				   MOTOR ON pin on FDD interface */
+  fdd_dir_t direction;	/* 0 = spindlewards, 1 = rimwards */
+  int dden;		/* SD/DD -> FM/MFM */
+  int intrq;		/* INTRQ line status */
+  int datarq;		/* DRQ line status */
+  int head_load;	/* WD1773/FD1793 */
+  int hlt;		/* WD1773/FD1793 Head Load Timing input pin */
+  int hlt_time;		/* "... When a logic high is found on the HLT input
+			   the head is assumed to be enganged. It is typically
+			   derived from a 1 shot triggered by HLD ..."
+			   if hlt_time > 0 it means trigger time in ms, if = 0
+			   then hlt should be set with wd_fdc_set_hlt()  */
+  unsigned int flags;	/* Configuration flags (interface-specific) */
 
   enum wd_fdc_state {
     WD_FDC_STATE_NONE = 0,
@@ -89,7 +91,7 @@ typedef struct wd_fdc {
     WD_FDC_STATE_READID,
   } state;
 
-  int read_id;			/* FDC try to read a DAM */
+  int read_id;		/* FDC try to read a DAM */
 
   enum wd_fdc_status_type {
     WD_FDC_STATUS_TYPE1,
@@ -106,13 +108,13 @@ typedef struct wd_fdc {
   int id_track;
   int id_head;
   int id_sector;
-  int id_length;		/* sector length code 0, 1, 2, 3 */
-  int sector_length;		/* sector length from length code */
-  int ddam;			/* read a deleted data mark */
-  int rev;			/* revolution counter */
+  int id_length;	/* sector length code 0, 1, 2, 3 */
+  int sector_length;	/* sector length from length code */
+  int ddam;		/* read a deleted data mark */
+  int rev;		/* revolution counter */
 
   /* state during transfer */
-  int data_check_head;		/* -1 no check, 0/1 wait side 0 or 1 */
+  int data_check_head;	/* -1 no check, 0/1 wait side 0 or 1 */
   int data_multisector;
   int data_offset;
 
