@@ -4788,3 +4788,4 @@
 	 Gergely) (Stuart).
 20150506 peripherals/disk/{opus.c,wd_fdc.[ch]}: rename WD_FLAG_OPUS to
 	 WD_FLAG_DRQ (part of patch #330) (Gergely Szasz).
+20150506 peripherals/disk/wd_fdc.h: tidy up comments (Stuart).
